--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:label="mapsapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyD3nB0RCk5OVs_lbJafU8ZyXozKAJRsbl0"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
