--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   geolocator: ^13.0.3
+  google_maps_flutter: ^2.12.1
   meta: ^1.16.0
   permission_handler: ^11.4.0
 
